@@ -1,5 +1,7 @@
 2006-10-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* inst/: Added texts and started vignette.
+
 	* R/: Final changes based upon David's comments.
 
 2006-10-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>
